welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:5: error: illegal start of simple expression
  val L= litMessage(.toInt)
                    ^Array2:45: error: ')' expected but '}' found.
} 
^