welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
  var k = getMondeLargeur()
  var i =getMondeHauteur()
  var T = new Array [Color](i)
  val L= litMessage(.toInt)
  
  
  for (j <- 0 to T.length-1){
    var m = getCouleurSol()
    T(j)=m
    avance()
  }
  recule(j)
  gauche()
  avance()
  droite()
  
  for (g <- 0 to k-1){
    
  }
  
  for (cnt <- 0 to k){
    gauche()
    avance()
    droite()
    avance()
  
   for (cnt1 <- 0 to T.length-1){
      
    
      setCouleurBrosse(T(cnt1))
      baisseBrosse()
      leveBrosse()
      avance()
  }
  }
  gauche()
  avance(k-2)
  droite()
  avance(i-2)
  
  
  

}